--- a/templates/documentation/edit.html
+++ b/templates/documentation/edit.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
     <div class="col-md-8">
-        <form method="POST">
+        <form method="POST" action="{{ url_for('documentation.edit', id=doc.id if doc else 0) }}">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
                 <input type="text" class="form-control" id="title" name="title" value="{{ doc.title if doc else '' }}" required>
